# Tree_cutter_py

./: .gitignore  CITATION.cff  LICENSE  README.md  Single_trees_hand_care_v.1.4.9.py  Single_trees_hand_care_v1.4.8.py  pyproject.toml
tree_cutter/: __init__.py  tree_cutter.py
